hphp/test/slow/modules/module_level_traits_6.php.expectf
Fatal error: Uncaught exception 'ModuleBoundaryViolationException' with message 'Accessing internal function foo in module MLT_B from outside of a module is not allowed' in %s/module_level_traits_6.inc0:7
Stack trace:
%A
